--- a/frontend/components/registration/register.html
+++ b/frontend/components/registration/register.html
@@ -1,22 +1,22 @@
-<div class="bg-light p-5 rounded w-50">
-	<h1 class="mb-4 text-center">🔑 Passkey</h1>
-	<div class="text-center" id="message"></div>
-	<div class="mb-3">
-		<input
-			type="text"
-			class="form-control"
-			id="username"
-			placeholder="username"
-		/>
-	</div>
-	<div class="d-grid gap-2">
-		<div class="row">
-			<div class="col">
-				<button class="btn btn-primary w-100" id="registerButton">Register</button>
-			</div>
-			<div class="col">
-				<button class="btn btn-primary w-100" id="loginButton">Login</button>
-			</div>
+<template id="register-form-template">
+	<div class="bg-light p-5 rounded w-50 m-auto">
+		<h1 class="mb-4 text-center">New Account</h1>
+		<div class="text-center" id="message"></div>
+		<div class="mb-3">
+			<form id="register-form">
+				<div class="row">
+					<div class="col form-group mb-3" slot-name="name"></div>
+					<div class="col form-group mb-3" slot-name="lastName"></div>
+				</div>
+				<div class="form-group mb-3" slot-name="email"></div>
+				<div class="row" slot-name="password"></div>
+				<button class="btn btn-primary" type="submit">Register</button>
+			</form>
+			<a class='a link-secondary mt-3 d-block' href='/login'>Login</a>
 		</div>
 	</div>
-</div>
+	<style>
+		@import url('/css/main.css');
+		@import url('/node_modules/bootstrap/dist/css/bootstrap.min.css');
+	</style>
+</template>
