fix(router): load whole url as string

--- a/frontend/components/settings/settings.html
+++ b/frontend/components/settings/settings.html
@@ -4,8 +4,8 @@
 	</div>
 	<ul>
 		<li onclick="alert('hi')"><a>Third party</a></li>
-		<li onclick='window.router.loadRoute("deleteprofile")'><a >Delete Profile</a></li>
-		<li onclick="window.router.loadRoute('settings/editprofile')"><a>Edit Profile</a></li>
+		<li onclick='window.router.loadUrl("/deleteprofile")'><a >Delete Profile</a></li>
+		<li onclick="window.router.loadUrl('/settings/editprofile')"><a>Edit Profile</a></li>
 	</ul>
 </div>
 <style>
