--- a/frontend/components/registration/register.html
+++ b/frontend/components/registration/register.html
@@ -12,7 +12,7 @@
 				<div class="row" slot-name="password"></div>
 				<button class="btn btn-primary" type="submit">Register</button>
 			</form>
-			<a class='a link-secondary mt-3 d-block' href='/login'>Login</a>
+			<a class="a link-secondary mt-3 d-block" href="/login">Login</a>
 		</div>
 	</div>
 	<style>
