feat(template): use vites build system to import html

--- a/frontend/components/registration/delete_user.html
+++ b/frontend/components/registration/delete_user.html
@@ -1,7 +1,5 @@
 <div>
-	<button
-		id="delete_profile"
-		class="d-flex align-items-center btn btn-danger pe-3"
+	<button id="delete_profile" class="d-flex align-items-center btn btn-danger pe-3"
 	>
 		<sl-icon name="trash" class="fs-3 m-2"></sl-icon>
 		Delete Profile
