--- a/frontend/components/login/login.html
+++ b/frontend/components/login/login.html
@@ -1,6 +1,4 @@
-<div
-	class="m-auto p-5 rounded text-center"
-	style="
+<div class="m-auto p-5 rounded text-center" style="
 		top: 50%;
 		transform: translateY(-50%) translateX(-50%);
 		position: absolute;
@@ -12,30 +10,13 @@
 	<div class="mb-3">
 		<form id="login-form" class="mb-3">
 			<div class="mb-3">
-				<input
-					type="text"
-					id="username"
-					name="username"
-					placeholder="Username"
-					autocomplete="username"
-					required
-					class="form-control"
+				<input type="text" id="username" name="username" placeholder="Username"	autocomplete="username"	required class="form-control"
 				/>
 			</div>
 			<div class="input-group mb-3" style="width: max-content">
-				<input
-					type="password"
-					id="password"
-					name="password"
-					class="form-control"
-					autocomplete="current-password"
-					placeholder="Password"
-				/>
+				<input type="password" id="password" name="password" class="form-control" autocomplete="current-password" placeholder="Password"/>
 				<div class="input-group-append">
-					<button
-						class="btn btn-primary input-group-btn p-1 d-flex"
-						id="loginButton"
-					>
+					<button	class="btn btn-primary input-group-btn p-1 d-flex" id="loginButton">
 						<sl-icon name="fingerprint" style="font-size: 28px"></sl-icon>
 					</button>
 				</div>
