feat(credentials): include credential generation in settings

--- a/frontend/components/settings/settings.html
+++ b/frontend/components/settings/settings.html
@@ -10,6 +10,9 @@
 		<li onclick="window.router.loadUrl('/settings/editprofile')">
 			<a>Edit Profile</a>
 		</li>
+		<li onclick="window.router.loadUrl('/settings/credential')">
+			<a>Add device credentials</a>
+		</li>
 	</ul>
 </div>
 <style>
