--- a/.ressources/templates/frontend/html/List.html
+++ b/.ressources/templates/frontend/html/List.html
@@ -1,4 +1,8 @@
 <style>
         p {margin: 0;}
+        #content {
+            width: 80%;
+            margin: auto;
+        }
 </style>
 <div id="content"></div>
