--- a/frontend/components/login/login.html
+++ b/frontend/components/login/login.html
@@ -1,5 +1,4 @@
-<div class="m-auto p-5 rounded text-center" style="
-		top: 50%;
+<div class="m-auto p-5 rounded text-center" style="top: 50%;
 		transform: translateY(-50%) translateX(-50%);
 		position: absolute;
 		left: 50%;
@@ -10,13 +9,19 @@
 	<div class="mb-3">
 		<form id="login-form" class="mb-3">
 			<div class="mb-3">
-				<input type="text" id="username" name="username" placeholder="Username"	autocomplete="username"	required class="form-control"
+				<input type="text" id="username" name="username" placeholder="Username" autocomplete="username"	required class="form-control"
 				/>
 			</div>
 			<div class="input-group mb-3" style="width: max-content">
-				<input type="password" id="password" name="password" class="form-control" autocomplete="current-password" placeholder="Password"/>
+				<input	type="password"	id="password"
+					name="password"
+					class="form-control"
+					autocomplete="current-password"
+					placeholder="Password"
+				/>
 				<div class="input-group-append">
-					<button	class="btn btn-primary input-group-btn p-1 d-flex" id="loginButton">
+					<button	class="btn btn-primary input-group-btn p-1 d-flex" id="loginButton"
+					>
 						<sl-icon name="fingerprint" style="font-size: 28px"></sl-icon>
 					</button>
 				</div>
@@ -25,11 +30,9 @@
 				Login
 			</button>
 		</form>
-		<a href="/register" class="a link-secondary">Sign up</a>
 	</div>
-	<div class="d-grid gap-2">
-		<div class="row">
-			<div class="col"></div>
+		<div style="display: grid">
+			<a href="/register" class="a link-secondary">Sign up</a>
+			<a href="/resetpassword" class="a link-secondary">Forgot password?</a>
 		</div>
-	</div>
 </div>
