--- a/frontend/components/login/reset_password.html
+++ b/frontend/components/login/reset_password.html
@@ -4,23 +4,23 @@
 		left: 50%;
 	"
 >
-	<h1 class="mb-4 text-center">Reset password</h1>
+<h1 class="mb-4 text-center">${i18next.t('generic.reset_password')}</h1>
 	<div class="text-center" id="message"></div>
 	<div class="mb-3">
 		<form id="reset-form" class="mb-3">
 			<div class="mb-3">
 				<input type="text" id="username"
 					name="username"
-					placeholder="Username"
+					placeholder="${i18next.t('login.username')}"
 					autocomplete="username"
 					required class="form-control"
 				/>
 			</div>
 			<div class="text-center m-3 text-danger" id="error-message"></div>
 			<button class="btn btn-primary rounded rounded-3" type="submit">
-				Send reset mail
+				${i18next.t('login.send_reset_mail')}
 			</button>
 		</form>
-		<a href="/register" class="a link-secondary">Sign up</a>
+		<a href="/register" class="a link-secondary">${18next.t('login.sing_up')}</a>
 	</div>
 </div>
