--- a/frontend/components/registration/delete_user.html
+++ b/frontend/components/registration/delete_user.html
@@ -2,7 +2,7 @@
 	<button id="delete_profile" class="d-flex align-items-center btn btn-danger pe-3"
 	>
 		<sl-icon name="trash" class="fs-3 m-2"></sl-icon>
-		Delete Profile
+		${i18next.t('settings.delete_profile')}
 	</button>
 </div>
 <password-dialog></password-dialog>
