--- a/frontend/components/registration/register-credentials.html
+++ b/frontend/components/registration/register-credentials.html
@@ -1,4 +1,4 @@
-<button id="registerButton">Add credentials</button>
+<button id="registerButton">${i18next.t('settings.add_credentials')}</button>
 <style>
 	button {
 		border-radius: 5px;
