--- a/.ressources/templates/frontend/html/Form.html
+++ b/.ressources/templates/frontend/html/Form.html
@@ -10,7 +10,7 @@
 				`<div class="form-group mb-3" slot-name="${field.name}"></div>`
 		)
 		.join('\n')}
-            <button class="btn btn-primary" type="submit">Submit</button>
+		<button class="btn btn-primary" type="submit">${i18next.t('forms.submit')}</button>
         </form>
     </div>
 </div>
