--- a/frontend/components/login/password_reset_token.html
+++ b/frontend/components/login/password_reset_token.html
@@ -1,13 +1,13 @@
 <div id="content">
 	<div>
-		Set new Password
+		${i18next.t('login.set_new_password')}
 	</div>
 	<form id='password_form'>
 		<div slot-name="password">
 		</div>
-		<button class='btn btn-primary' type='submit'>Submit</button>
+		<button class='btn btn-primary' type='submit'>${i18next.t('form.submit')}</button>
 	</form>
-			<a href="/login" class="a link-secondary">Login</a>
+	<a href="/login" class="a link-secondary">${i18next.t('login.login')}</a>
 </div>
 <style>
 #content {
