--- a/frontend/components/login/reset_password.html
+++ b/frontend/components/login/reset_password.html
@@ -21,6 +21,6 @@
 				${i18next.t('login.send_reset_mail')}
 			</button>
 		</form>
-		<a href="/register" class="a link-secondary">${18next.t('login.sing_up')}</a>
+		<a href="/register" class="a link-secondary">${i18next.t('login.sing_up')}</a>
 	</div>
 </div>
