--- a/.ressources/templates/frontend/html/Details.html
+++ b/.ressources/templates/frontend/html/Details.html
@@ -1,4 +1,4 @@
 <style>
     p {margin: 0;}
 </style>
-${fields.map((field) =>`<p><strong>${capitalize(field.name)}:</strong> \${${field.name}}</p>`).join('\n')}
+${fields.map((field) =>`<p><strong>\${i18next.t('${modelName}.${capitalize(field.name)}')}:</strong> \${props.${field.name}}</p>`).join('\n')}
