feat(components): import html a virtual module
implement a vite plugin to load html code as virtual module and export
them as template literal in a js file. This allows for separation of
html code and javascript code while keeping the advantage of template
literals while development.

--- a/.ressources/templates/frontend/html/Card.html
+++ b/.ressources/templates/frontend/html/Card.html
@@ -23,9 +23,9 @@
 </style>
 <div id="card" class="card">
 	<div class="card-header">
-	    <h3>${'${header}'}</h3>
+	    <h3>${'${props.header}'}</h3>
     </div>
     <div class="card-content">
-        ${fields.map((field) => `<p><strong>${capitalize(field.name)}:</strong> \${${field.name}}</p>`).join('\n')}
+	    ${fields.map((field) => `<p><strong>\${i18next.t('${modelName}.${capitalize(field.name)}')}:</strong> \${props.${field.name}}</p>`).join('\n')}
     </div>
 </div>
