--- a/frontend/components/navigation/header/header.html
+++ b/frontend/components/navigation/header/header.html
@@ -1,5 +1,5 @@
 <nav>
-	<div style="width: 100%">${navItems}</div>
+	<div style="width: 100%">${props.navItems}</div>
 	<div>
 		<a href="/logout">
 			<sl-icon name="box-arrow-in-right" style="font-size: 28px"></sl-icon>
