--- a/frontend/components/login/login.html
+++ b/frontend/components/login/login.html
@@ -1,9 +1,4 @@
-<div class="m-auto p-5 rounded text-center" style="top: 50%;
-		transform: translateY(-50%) translateX(-50%);
-		position: absolute;
-		left: 50%;
-	"
->
+<div class="m-auto p-5 rounded text-center" style="top: 50%; transform: translateY(-50%) translateX(-50%); position: absolute; left: 50%;">
 <h1 class="mb-4 text-center">${i18next.t('login.header')}</h1>
 	<div class="text-center" id="message"></div>
 	<div class="mb-3">
@@ -13,13 +8,7 @@
 				/>
 			</div>
 			<div class="input-group mb-3" style="width: max-content">
-				<input	type="password"	id="password"
-					name="password"
-					class="form-control"
-					autocomplete="current-password"
-					i18n-key='login.password'
-					placeholder="${i18next.t('login.password')}"
-				/>
+				<input type="password"	id="password" name="password" class="form-control" autocomplete="current-password" i18n-key='login.password' placeholder="${i18next.t('login.password')}"/>
 				<div class="input-group-append">
 					<button	class="btn btn-primary input-group-btn p-1 d-flex" id="loginButton"
 					>
