--- a/.ressources/templates/openapi/go-server/main.mustache
+++ b/.ressources/templates/openapi/go-server/main.mustache
@@ -2,21 +2,26 @@
 package main
 
 import (
-	"log"
 	"net/http"
 	"os"
+	"fmt"
+	"log"
+
 	"github.com/rs/cors"
 	 "github.com/joho/godotenv"
 
 	{{packageName}} "{{gitHost}}/{{gitUserId}}/{{gitRepoId}}/{{sourceFolder}}"
 )
 
-var signingKwey = []byte("")
+var signingKey = []byte("")
 
 func main() {
-	err := godotenv.Load('../../.env')
+	err := godotenv.Load("../../.env")
 	if err != nil {
-		log.Fatal("Error loading .env file")
+		err = godotenv.Load(".env")
+		if err != nil {
+			fmt.Println("Error loading .env file")
+		}
 	}
 	signingKey = []byte(os.Getenv("JWT_SECRET"))
 
